# fluyendo

./: Cargo.toml  index.html
.github/workflows/: linux-release.yml  linux.yml  macos-release.yml  macos.yml  publish.yml  windows-release.yml  windows.yml
res/: lofi-alarm-clock.credit
src/: audio.rs  color.rs  config.rs  main.rs  ring.rs  state.rs
src/audio/: native.rs  stub.rs  web.rs
src/colors/: defaults.rs
